--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,13 @@
   "scripts": {
     "build": "npx thirdweb@latest detect",
     "deploy": "npx thirdweb@latest deploy",
-    "release": "npx thirdweb@latest release"
+    "release": "npx thirdweb@latest release",
+    "start": "node scripts/runStart",
+    "deploy-hardhat": "node scripts/runDeploy",
+    "execute": "node scripts/runExecute",
+    "setup": "node scripts/runSetupEnv",
+    "check-balance": "node scripts/runCheckBalance",
+    "build-hardhat": "rm -rf artifacts && npx hardhat clean && npx hardhat compile"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-foundry": "^1.0.0",
