--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,13 @@
     "@axelar-network/axelar-local-dev": "^1.4.2",
     "@axelar-network/axelarjs-sdk": "^0.12.5-alph.3",
     "@thirdweb-dev/contracts": "^3",
-    "chai": "^4.3.7"
+    "chai": "^4.3.7",
+    "@openzeppelin/contracts": "^4.5.0",
+    "axios": "^0.27.2",
+    "bip39": "^3.0.4",
+    "dotenv": "^16.0.2",
+    "ethers": "^5.6.2",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "build": "npx thirdweb@latest detect",
@@ -27,6 +33,8 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-foundry": "^1.0.0",
     "hardhat": "^2.13.0",
+    "hardhat-gas-reporter": "^1.0.8",
+    "mocha": "^10.0.0",
     "solhint": "^3.3.7",
     "solidity-coverage": "^0.7.21",
     "prettier": "^2.6.2",
